# quietreasoning

./: .gitignore  README.md  launch_tpu.sh  pyproject.toml  run.py  spec.md  train.py
docs/: architecture.dot  modules.dot  training_recipe.md
quietreasoning/: __init__.py  config.py
quietreasoning/eval/: __init__.py  long_context.py  popqa.py
quietreasoning/memory/: __init__.py  episodic.py  knn.py  kv_cache.py  pkm.py
quietreasoning/model/: __init__.py  adapters.py  layers.py  model.py  router.py  ssm.py  workspace.py
quietreasoning/tools/: build_indices.py
quietreasoning/training/: data.py  inference.py  launch.py  loop.py  losses.py  optimizer.py  stages.py
quietreasoning/utils/: surprise.py  tokenizer.py
tests/: test_model.py
